2008-08-12  Dan Williams  <dcbw@redhat.com>

	* src/gconf-helpers/gconf-upgrade.c
		- (nm_gconf_migrate_0_7_openvpn_properties): migrate 'shared' -> 'static'
			too, fix missing initialization that caused connection type not to
			get migrated

2008-08-12  Tambet Ingo  <tambet@gmail.com>

	* src/connection-editor/page-ip4.c (ce_page_ip4_new): Rename the 
	"Prefix" column header to "Netmask", which is hopefully better
	understood.
	(parse_netmask): Implement. Accept both prefix length and netmask.
	(ui_to_setting): Use parse_netmask() to ... parse netmask.

2008-08-11  Dan Williams  <dcbw@redhat.com>

	Update to match NM svn3924 vpn setting changes (consolidated vpn and
	vpn-properties settings; vpn-specific data now a hash of string:string
	instead of string:variant); convert old GConf entries to new format

2008-08-07  Dan Williams  <dcbw@redhat.com>

	* src/connection-editor/ce-page-wired.glade
	  src/connection-editor/ce-page-wireless.glade
		- Replace "Example:" labels with tooltips

2008-08-06  Dan Williams  <dcbw@redhat.com>

	* src/connection-editor/page-ip4.c
		- 'shared' is pointless for VPN connections

2008-08-06  Dan Williams  <dcbw@redhat.com>

	* src/connection-editor/ce-page-ip4.glade
		- Add a checkbox for 'ignore-auto-routes'

	* src/connection-editor/ip4-routes-dialog.c
	  src/connection-editor/ip4-routes-dialog.h
	  src/connection-editor/page-ip4.c
		- Handle route editing

2008-08-06  Dan Williams  <dcbw@redhat.com>

	* src/gconf-helpers/gconf-helpers.c
	  src/gconf-helpers/gconf-helpers.h
		- Generalize IP4 helper functions to handle both routes and addresses

	* src/gconf-helpers/gconf-upgrade.c
	  src/gconf-helpers/gconf-upgrade.h
		- (nm_gconf_migrate_0_7_ignore_dhcp_dns, nm_gconf_migrate_0_7_vpn_routes):
			new functions

2008-08-05  Dan Williams  <dcbw@redhat.com>

	* src/connection-editor/Makefile.am
	  src/connection-editor/ip4-routes-dialog.c
	  src/connection-editor/ip4-routes-dialog.h
	  src/connection-editor/ce-page-ip4.glade