@@ -1,3 +1,13 @@
+2008-08-14  Dan Williams  <dcbw@redhat.com>
+
+	* src/applet-device-cdma.c
+	  src/applet-device-gsm.c
+	  src/applet-device-wired.c
+	  src/connection-editor/page-wired-security.c
+	  src/wired-dialog.c
+		- Don't use gtk_box_pack_start_defaults(), which is deprecated
+			(bgo #547158)
+
 2008-08-12  Dan Williams  <dcbw@redhat.com>
 
 	* src/gconf-helpers/gconf-upgrade.c
